--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!--header-->
     <header>
       <nav>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
-          <li><a href="">Cantacts</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -89,17 +89,32 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tom.jpg" alt="Tom Ford" />
+            <img
+              src="./images/tom.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camila.jpg" alt="Camila Garcia" />
+            <img
+              src="./images/camila.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/daniel.jpg" alt="Daniel Wilson" />
+            <img
+              src="./images/daniel.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -109,7 +124,7 @@
 
     <!--footer-->
     <footer>
-      <a href="">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
